2009-02-19  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/iom128rfa1.h: Fix some C syntax errors
	that have sneaked in during the last update.

2009-02-19  Eric B. Weddington  <eric.weddington@atmel.com>

	* configure.ac: Add support for ATmega16U4.
	* devtools/gen-avr-lib-tree.sh: Same.
	* include/avr/Makefile.am: Same.
	* include/avr/io.h: Same.
	* doc/api/main_page.dox: Same.
	* doc/api/using-tools.dox: Same.
	* include/avr/power.h: Same.
	* include/avr/wdt.h: Same.
	* include/avr/sleep.h: Same.
	* include/avr/iom16u4.h: New file.
	* NEWS: Add item.

2009-02-19  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/sleep.h: Add sleeping BOD API.
	* NEWS: Add news item.

2009-02-19  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix bug #25645.
	* include/avr/iox256a3b.h: Change PR register to PRGEN because this
	conflicts with a #defined symbol.
	* include/avr/iox256a3.h: Same.
	* include/avr/iox128a3.h: Same.
	* include/avr/iox128a1.h: Same.
	* include/avr/iox64a3.h: Same.
	* include/avr/iox64a1.h: Same.
	* NEWS: Add item to fixed bug list.

2009-02-19  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Contributed by Bob Paddock:
	(part of) patch #6720: FAQ update. Add EEPROM section, baud rate section.
	Correct spelling.
	* doc/api/faq.dox: Spelling fixes, remove trailing white space.

2009-02-19  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Contributed by Bob Paddock:
	(part of) patch #6720: FAQ update. Add EEPROM section, baud rate section.
	Correct spelling.
	* doc/api/faq.dox (faq_eeprom_corruption, faq_wrong_baud_rate): new
	entries.

2009-02-18  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/power.h: Add ATmega128RFA1.
	* include/avr/sleep.h: (Ditto.)

2009-02-16  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix repository breakage. Thanks to Anatoly.
	* configure.ac: Test for xmega2 architecture. Fix architecture type.
	* devtools/gen-avr-lib-tree.sh: Add missing semicolons.
